fixed headline_text_container div overlapping nav div

--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -7,10 +7,12 @@ $libre-baskerville: 'Libre Baskerville', serif
 .nav
   display: flex
   justify-content: space-around
-  padding: 30px 10%
+  padding: 0px 10%
   font-style: italic
   color: $baby-blue
-  margin-top: -10px
+  margin-top: 15px
+  margin-bottom: 30px
+  // background-color: red
 
 .nav_links
   list-style: none
@@ -95,7 +97,7 @@ $libre-baskerville: 'Libre Baskerville', serif
 
 .banner
   width: 100vw
-  min-height: 100% 
+  min-height: 100%
 
 .headline_text_container
   display: flex
@@ -107,14 +109,21 @@ $libre-baskerville: 'Libre Baskerville', serif
   justify-content: space-between
   padding-left: 100px
   padding-right: 100px
-  margin-top: 60px
+  margin-top: 30px
   padding-bottom: 50px
   word-wrap: break-word
+  padding-bottom: 20px
+
+.headline
+  color: white
+  text-align: center
+  // margin-top: 50px
 
 .countdown_container
   display: flex
   flex-direction: column
   align-items: center
+  // margin-top: 80px
 
 .countdown_container h1 
   font-size: 2vw
@@ -130,13 +139,9 @@ $libre-baskerville: 'Libre Baskerville', serif
 .countdown_item
   display: flex
   flex-direction: column
-  // min-height: 80px
   height: max-content
   background-color: #b3b3b363
-  // min-height: 5.5vw
   padding: 15px
-  // overflow: visible
-  // display: inline-block
 
 .countdown_number
   text-align: center
@@ -150,17 +155,12 @@ $libre-baskerville: 'Libre Baskerville', serif
   // font-size: 15px
   font-style: italic
 
-.headline
-  color: white
-  text-align: center
-  margin-top: 10px
-  // position: absolute
-  // transform: translate(50%, -105%)
-
 .headline h1 
-  font-size: 2.5vw
+  padding-top: 10px
+  font-size: 3vw
 
-.headline h4 
+.headline h3
+  //font-size: 1vw 
   margin-top: -20px
 
 .headline h5 
